# handson-langchain

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
api/: main.py
api/routers/: azure_cognitive_search.py  chat.py  information.py  youtube.py
api/schemas/: azure_cognitive_search.py  chat.py  chroma.py  youtube.py
api/settings/: azure_cognitive_search.py  chat.py  chroma.py  information.py  youtube.py
notebooks/: README.md  blob_storage.ipynb  chroma.ipynb  cognitive_search.ipynb  cosmosdb.ipynb  credentials.env.sample  huggingface_basic.ipynb  keyvault.ipynb  langchain_basic.ipynb  langchain_cookbook_rag.ipynb  langchain_evaluation.ipynb  langchain_generate_qa.ipynb  langchain_references.ipynb  langchain_splitters.ipynb  langchain_vectorstores.ipynb  summarize_youtube.ipynb
scripts/: code.py  generate_test_code.py
tests/: test_information.py  test_main.py
