[tool.poetry]
name = "app"
version = "0.0.1"
description = "Hands on langchain"
authors = ["ks6088ts <ks6088ts@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
openai = "^0.27.8"
langchain = "^0.0.305"
chromadb = "^0.4.8"
tiktoken = "^0.4.0"
azure-search-documents = "11.4.0b8"
azure-identity = "^1.14.0"
azure-cosmos = "^4.5.0"
azure-keyvault-secrets = "^4.7.0"
pypdf = "^3.16.2"
langchainhub = "^0.1.13"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
black = "^23.7.0"
isort = "^5.12.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"


[tool.poetry.group.playground.dependencies]
jupyterlab = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "fastapi.concurrency"
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
log_cli = "true"
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.isort]
profile = "black"
