[tool.poetry]
name = "app"
version = "0.0.1"
description = "Hands on langchain"
authors = ["ks6088ts <ks6088ts@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.99.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
openai = "0.28.1"
langchain = "^0.0.331"
chromadb = "^0.4.8"
tiktoken = "^0.4.0"
azure-search-documents = "11.4.0b8"
azure-identity = "^1.14.0"
azure-cosmos = "^4.5.0"
azure-keyvault-secrets = "^4.7.0"
pypdf = "^3.16.2"
langchainhub = "^0.1.13"
transformers = "^4.34.0"
tensorflow = "^2.14.0"
huggingface-hub = "^0.17.3"
datasets = "^2.14.5"
numexpr = "^2.8.7"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.4"


[tool.poetry.group.lint.dependencies]
ruff = "^0.1.4"
black = "^23.10.1"
isort = "^5.12.0"


[tool.poetry.group.typing.dependencies]
mypy = "^1.6.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "fastapi.concurrency"
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
log_cli = "true"
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.isort]
profile = "black"
